# Fastapi-test-project

./: .gitignore  api2.py  main.py  push  pyproject.toml
backend/: api.py  middleware.py
src/: App.js
src/compoenents/: AuthPage.jsx  LoginPage.jsx  Welcome.jsx
src/contexts/: AuthContext.tsx
